syntax = "proto3";
package catalog.v1;
option go_package = "github.com/wyfcoding/financialtrading/go-api/catalog/v1;v1";

service CatalogService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}

message Product { string id = 1; string name = 2; string description = 3; double price = 4; int32 stock = 5; string category = 6; }
message GetProductRequest { string id = 1; }
message GetProductResponse { Product product = 1; }
message ListProductsRequest { string category = 1; int32 page = 2; int32 size = 3; }
message ListProductsResponse { repeated Product products = 1; int32 total = 2; }
message CreateProductRequest { string name = 1; string description = 2; double price = 3; int32 stock = 4; string category = 5; }
message CreateProductResponse { string id = 1; }
